--- a/.github/workflows/windows-golang-test.yml
+++ b/.github/workflows/windows-golang-test.yml
@@ -49,5 +49,6 @@ jobs:
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
           export CGO_CFLAGS="-DHIGHCTIDH_PORTABLE=1 -DCGONUTS -D__Windows__"
+          go clean -x -cache
           go test -x -v ./...
 
