--- a/.github/workflows/windows-golang-test.yml
+++ b/.github/workflows/windows-golang-test.yml
@@ -24,6 +24,12 @@ jobs:
         shell: bash
         run: go version
 
+      - name: Downgrade mingw due to cgo
+        shell: bash
+        run: |
+          choco install -y make
+          choco install -y mingw --version 10.2.0 --allow-downgrade
+
       - name: Install golang dependencies
         shell: bash
         run: |
