--- a/.github/workflows/windows-golang-test.yml
+++ b/.github/workflows/windows-golang-test.yml
@@ -36,6 +36,7 @@ jobs:
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
           export CGO_LDFLAGS="-DCGONUTS"
+          export CC=x86_64-w64-mingw32-gcc.exe
           go get -v ./src/ctidh511
           go get -v ./src/ctidh512
           go get -v ./src/ctidh1024
@@ -47,6 +48,7 @@ jobs:
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
           export CGO_CFLAGS="-DHIGHCTIDH_PORTABLE=1 -DCGONUTS -D__Windows__"
+          export CC=x86_64-w64-mingw32-gcc.exe
           go build -x -v ./...
 
       - name: Golang test
@@ -55,6 +57,7 @@ jobs:
           export HIGHCTIDH_PORTABLE=1
           export CGO_ENABLED=1
           export CGO_CFLAGS="-DHIGHCTIDH_PORTABLE=1 -DCGONUTS -D__Windows__"
+          export CC=x86_64-w64-mingw32-gcc.exe
           go clean -x -cache
           go test -x -v ./...
 
