this is nightmare fuel

--- a/.github/workflows/windows-golang-clang-test.yml
+++ b/.github/workflows/windows-golang-clang-test.yml
@@ -33,6 +33,7 @@ jobs:
           export CC=${{ matrix.CC }}
           export CGO_ENABLED=1
           export CGO_LDFLAGS="-ladvapi32.lib"
+          export CGO_CFLAGS="-DHIGHCTIDH_PORTABLE=1 -DCGONUTS -D__Windows__"
           go get -v ./src/ctidh511
           go get -v ./src/ctidh512
           go get -v ./src/ctidh1024
@@ -56,6 +57,5 @@ jobs:
           export CGO_ENABLED=1
           export CGO_LDFLAGS="-ladvapi32.lib -Wl,--no-as-needed"
           export CGO_CFLAGS="-DHIGHCTIDH_PORTABLE=1 -DCGONUTS -D__Windows__"
-          go clean -x -cache
           go test -x -v ./...
 
