--- a/.github/workflows/windows-golang-clang-test.yml
+++ b/.github/workflows/windows-golang-clang-test.yml
@@ -11,7 +11,7 @@ jobs:
         OS: ["windows-2022"]
         CC: ["clang"]
         #go-version: [ "1.20", "1.21.x", "1.22.x"]
-        go-version: ["1.22.x"]
+        go-version: ["1.22.2"]
       fail-fast: false
 
     steps:
