--- a/.github/workflows/windows-golang-test.yml
+++ b/.github/workflows/windows-golang-test.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         #OS: ["windows-2019", "windows-2022"]
         OS: ["windows-2022"]
-        go-version: ["1.22.x"]
+        go-version: ["1.22.2"]
       fail-fast: false
 
     steps:
