--- a/.github/workflows/docker-alpine-multi-arch.yml
+++ b/.github/workflows/docker-alpine-multi-arch.yml
@@ -11,14 +11,17 @@ jobs:
     strategy:
       matrix:
         CC: ["clang"]
-        PORTABLE: ["0", "1"]
+        PORTABLE: ["1"]
         CONTAINER: ["alpine:3.19.1"]
-        ARCH: ["amd64", "arm32v5", "arm32v6", "arm32v7", "i386", "arm64",
-               "mips64", "mips64le", "mips", "mipsle", "ppc64", "ppc64le",
+        ARCH: ["amd64", "armhf", "arm32v7", "i386", "aarch64", "ppc64le",
                "riscv64", "s390x"]
       fail-fast: false
     container: ${{ matrix.ARCH }}/${{ matrix.CONTAINER }}
     steps:
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
     - uses: actions/checkout@v4
 
     - name: Install alpine deps
