--- a/.github/workflows/docker-alpine-multi-arch.yml
+++ b/.github/workflows/docker-alpine-multi-arch.yml
@@ -13,7 +13,7 @@ jobs:
         CC: ["clang"]
         PORTABLE: ["1"]
         CONTAINER: ["alpine"]
-        ARCH: ["amd64", "arm/v6", "arm/v7", "i386", "aarch64", "ppc64le",
+        ARCH: ["amd64", "arm/v6", "arm/v7", "i386", "arm64v8", "ppc64le",
                "riscv64", "s390x"]
       fail-fast: false
     container: ${{ matrix.ARCH }}/${{ matrix.CONTAINER }}
