--- a/.github/workflows/docker-alpine-multi-arch.yml
+++ b/.github/workflows/docker-alpine-multi-arch.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ "main" ]
 jobs:
-  docker-multiarch:
+  multiarch:
     runs-on: ubuntu-latest
     strategy:
       matrix:
