--- a/.github/workflows/docker-alpine-multi-arch.yml
+++ b/.github/workflows/docker-alpine-multi-arch.yml
@@ -24,7 +24,8 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
 
-    - uses: actions/checkout@v4
+    - name: checkout
+      uses: actions/checkout@v4
 
     - name: Install requirements
       run : |
@@ -36,15 +37,15 @@ jobs:
         docker info
         uname -a
 
-     - name: Run in Docker
-       run: |
-         docker run \
-           -v $(pwd):/${{ github.workspace }} \
-           -w ${{ github.workspace }} \
-           -e "CC=${{ matrix.CC }}" \
-           -e "HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }}" \
-           -e "CFLAGS=-fno-lto" \
-           --rm -it \
-           ${{ matrix.DOCKER_ARCH_ARGS}} \
-           /bin/bash \
-           -c "cd /highctidh && ./misc/install-alpine-deps.sh && make alpine-multi-arch"
+    - name: Run in Docker
+      run: |
+        docker run \
+          -v $(pwd):/${{ github.workspace }} \
+          -w ${{ github.workspace }} \
+          -e "CC=${{ matrix.CC }}" \
+          -e "HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }}" \
+          -e "CFLAGS=-fno-lto" \
+          --rm -it \
+          ${{ matrix.DOCKER_ARCH_ARGS}} \
+          /bin/bash \
+          -c "cd /highctidh && ./misc/install-alpine-deps.sh && make alpine-multi-arch"
