--- a/.github/workflows/docker-alpine-multi-arch.yml
+++ b/.github/workflows/docker-alpine-multi-arch.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Install requirements
       run : |
-        apt install -y --no-install-recommends docker
+        sudo apt install -y --no-install-recommends docker
 
     - name: check kernel
       run: |
