--- a/.github/workflows/docker-alpine-multi-arch.yml
+++ b/.github/workflows/docker-alpine-multi-arch.yml
@@ -48,4 +48,4 @@ jobs:
           --rm \
           ${{ matrix.DOCKER_ARCH_ARGS}} \
           /bin/sh \
-          -c "cd /highctidh && ./misc/install-alpine-deps.sh && make alpine-multi-arch"
+          -c "./misc/install-alpine-deps.sh && make alpine-multi-arch"
