iterate on 32 and 64 bit separately

--- a/.github/workflows/docker-alpine-64bit-multi-arch.yml
+++ b/.github/workflows/docker-alpine-64bit-multi-arch.yml
@@ -1,4 +1,4 @@
-name: Alpine multi-arch docker build and test
+name: Alpine multi-arch docker 64bit build and test (clang)
 on:
   push:
   pull_request:
@@ -13,10 +13,7 @@ jobs:
         CONTAINER: ["alpine"]
         DOCKER_ARCH_ARGS: ["--platform linux/arm64/v8 arm64v8/alpine",
                       "--platform linux/amd64 amd64/alpine",
-                      "--platform linux/arm32/v6 arm32v6/alpine",
-                      "--platform linux/arm32/v7 arm32v7/alpine",
-                      "--platform linux/i386 i386/alpine",
-                      "--platform linux/riscv64 riscv64/alpine",
+                      "--platform linux/riscv64 riscv64/alpine:edge",
                       "--platform linux/ppc64le ppc64le/alpine",
                       "--platform linux/s390x s390x/alpine"]
       fail-fast: false
@@ -49,3 +46,6 @@ jobs:
           ${{ matrix.DOCKER_ARCH_ARGS}} \
           /bin/sh \
           -c "./misc/install-alpine-deps.sh && make alpine-multi-arch"
+                      "--platform linux/arm/v6 arm32v6/alpine",
+                      "--platform linux/arm/v7 arm32v7/alpine",
+                      "--platform linux/i386 i386/alpine",
