--- a/.github/workflows/docker-alpine-64bit-multi-arch.yml
+++ b/.github/workflows/docker-alpine-64bit-multi-arch.yml
@@ -45,7 +45,4 @@ jobs:
           --rm \
           ${{ matrix.DOCKER_ARCH_ARGS}} \
           /bin/sh \
-          -c "./misc/install-alpine-deps.sh && make alpine-multi-arch"
-                      "--platform linux/arm/v6 arm32v6/alpine",
-                      "--platform linux/arm/v7 arm32v7/alpine",
-                      "--platform linux/i386 i386/alpine",
+          -c "./misc/install-alpine-deps.sh && ./misc/docker-gha-fixup.sh && make alpine-multi-arch"
