--- a/.github/workflows/docker-alpine-32bit-multi-arch.yml
+++ b/.github/workflows/docker-alpine-32bit-multi-arch.yml
@@ -40,6 +40,7 @@ jobs:
           -e "CC=${{ matrix.CC }}" \
           -e "HIGHCTIDH_PORTABLE=${{ matrix.PORTABLE }}" \
           -e "CFLAGS=-fno-lto -fforce-enable-int128" \
+          -e "PLATFORM_SIZE=32" \
           --rm \
           ${{ matrix.DOCKER_ARCH_ARGS}} \
           /bin/sh \
