--- a/src/Makefile.packages
+++ b/src/Makefile.packages
@@ -77,7 +77,7 @@ test-python:
 	mkdir -p build/src
 	mkdir -p dist/tmp
 	python3 -m build
-	pip install --force-reinstall dist/highctidh-*.whl
+	pip install --break-system-packages --force-reinstall dist/highctidh-*.whl
 	python3 -c 'from highctidh import bench; bench.simple_bench()'
 	python3 -m pytest -v -n auto --doctest-modules -k 511
 	python3 -m pytest -v -n auto --doctest-modules -k 512
