Experimental build target for WebAssembly (wasm)
This changeset adds experimental WebAssembly support which is completely
untested and it should not be used. This is assumed to be insecure and
broken until reviewed, audited, and extensively tested.

The top-level `Makefile` now has a `wasm` target to build
`dist/highctidh.wasm`. The `autogen` script has been updated to reflect
the changes to `src/Makefile`.

This changeset also adds a CI configuration `ubuntu-webassembly.yml` for
building the library with the `emcc` compiler provided by the
`emscripten` package on Ubuntu GNU/Linux. It calls a new script
`misc/install-ubuntu-webassembly-deps.sh` to install the required
packages in the CI.

The `README.md` has been updated to reflect the new target.

Do not use this for anything - you have been warned!

--- a/src/Makefile
+++ b/src/Makefile
@@ -45,6 +45,11 @@ endif
 ifeq ($(CC),gcc)
 BASE_CFLAGS+=
 endif
+ifeq ($(CC),emcc)
+BASE_CFLAGS+=-Wno-unused-command-line-argument
+LDFLAGS=-s SIDE_MODULE=1
+endif
+
 ifeq ($(WINDOWS),1)
 BASE_CFLAGS :=-Wall -Wextra -pedantic -O2 -fwrapv -D__Windows__
 HIGHCTIDH_PORTABLE ?=1
@@ -975,6 +980,12 @@ test2048-dyn: test2048 libhighctidh_2048.so
 
 libhighctidh.so: libhighctidh_511.so libhighctidh_512.so libhighctidh_1024.so libhighctidh_2048.so
 		ls -l libhighctidh_*.so
+
+# This produces wasm as a shared library module
+highctidh.wasm: libhighctidh.so
+	export LDFLAGS="-s SIDE_MODULE=1"
+	$(CC) -v --no-entry -O1 *.o -o dist/highctidh.wasm
+	ls -al dist/highctidh.wasm
 
 setup-examples: csidh.h
 		-mkdir -p libhighctidh
