rename and add pkg

--- a/.github/workflows/windows-msys-gcc-cygwin-crt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-gcc-cygwin-crt-msvcrt-python-pip-test.yml
@@ -23,6 +23,7 @@ jobs:
           python
           python-pip
           git
+          gcc
           mingw-w64-x86_64-gcc
           mingw-w64-ucrt-x86_64-gcc
 
