install local package not remote package

--- a/.github/workflows/windows-msys-32bit-clang-ucrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-32bit-clang-ucrt-python-pip-test.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Build highctidh
       shell: msys2 {0}
       run: |
-        CC=${{ matrix.CC }} pip install -v highctidh
+        CC=${{ matrix.CC }} pip install -v .
 
     - name: Test with pytest
       shell: msys2 {0}
