install local package not remote package

--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Build highctidh
       shell: msys2 {0}
       run: |
-        CC=${{ matrix.CC }} pip install -v .
+        cd src/ && CC=${{ matrix.CC }} pip install -v .
 
     - name: Test with pytest
       shell: msys2 {0}
