--- a/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
@@ -25,6 +25,7 @@ jobs:
           git
           clang
           mingw-w64-x86_64-clang
+          make
 
     - name: Gather runtime environment
       shell: msys2 {0}
