--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
@@ -26,6 +26,7 @@ jobs:
           gcc
           mingw-w64-x86_64-gcc
           mingw-w64-ucrt-x86_64-gcc
+          make
 
     - name: Gather runtime environment
       shell: msys2 {0}
