--- a/.github/workflows/windows-msys-32bit-gcc-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-32bit-gcc-msvcrt-python-pip-test.yml
@@ -26,6 +26,7 @@ jobs:
           gcc
           mingw-w64-i686-gcc
           make
+          mingw-w64-python-flit
 
     - name: Gather runtime environment
       shell: msys2 {0}
