--- a/.github/workflows/windows-msys-32bit-gcc-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-32bit-gcc-msvcrt-python-pip-test.yml
@@ -26,7 +26,7 @@ jobs:
           gcc
           mingw-w64-i686-gcc
           make
-          mingw-w64-x86_64-python
+          mingw-w64-x86_64-python-flit-scm
 
     - name: Gather runtime environment
       shell: msys2 {0}
