mingw-w64-python-flit

--- a/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
@@ -26,7 +26,7 @@ jobs:
           clang
           mingw-w64-x86_64-clang
           make
-          mingw-w64-x86_64-python-flit-scm
+          mingw-w64-python-flit
 
     - name: Gather runtime environment
       shell: msys2 {0}
