pip install flit

--- a/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
@@ -26,7 +26,6 @@ jobs:
           clang
           mingw-w64-x86_64-clang
           make
-          mingw-w64-python-flit
 
     - name: Gather runtime environment
       shell: msys2 {0}
@@ -38,7 +37,7 @@ jobs:
 
     - name: Install dependencies
       shell: msys2 {0}
-      run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist
+      run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist flit
 
     - name: Build highctidh
       shell: msys2 {0}
