--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
@@ -27,7 +27,6 @@ jobs:
           mingw-w64-x86_64-gcc
           mingw-w64-ucrt-x86_64-gcc
           make
-          mingw-w64-python-flit
 
     - name: Gather runtime environment
       shell: msys2 {0}
@@ -40,7 +39,7 @@ jobs:
 
     - name: Install dependencies
       shell: msys2 {0}
-      run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist
+      run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist flit
 
     - name: Build highctidh
       shell: msys2 {0}
