--- a/.github/workflows/windows-msys-32bit-clang-ucrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-32bit-clang-ucrt-python-pip-test.yml
@@ -38,7 +38,7 @@ jobs:
 
     - name: Install dependencies
       shell: msys2 {0}
-      run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist flit distutils
+      run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist flit
 
     - name: Build highctidh
       shell: msys2 {0}
