--- a/.github/workflows/windows-msys-32bit-gcc-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-32bit-gcc-msvcrt-python-pip-test.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Build highctidh
       shell: msys2 {0}
       run: |
-        CC=${{ matrix.CC }} make wheel
+        CC=${{ matrix.CC }} CFLAGS="" make wheel
 
     - name: Test with pytest
       shell: msys2 {0}
