--- a/.github/workflows/windows-msys-32bit-clang-ucrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-32bit-clang-ucrt-python-pip-test.yml
@@ -22,6 +22,11 @@ jobs:
         install: >-
           python
           python-pip
+          python-build
+          python-setuptools
+          python-wheel
+          python-pytest
+          python-pytest-xdist
           git
           clang
           mingw-w64-i686-clang
@@ -38,7 +43,7 @@ jobs:
 
     - name: Install dependencies
       shell: msys2 {0}
-      run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist flit
+      run: python -m pip install --upgrade flit
 
     - name: Build highctidh
       shell: msys2 {0}
