--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
@@ -22,6 +22,11 @@ jobs:
         install: >-
           python
           python-pip
+          python-build
+          python-setuptools
+          python-wheel
+          python-pytest
+          python-pytest-xdist
           git
           gcc
           mingw-w64-x86_64-gcc
@@ -39,7 +44,7 @@ jobs:
 
     - name: Install dependencies
       shell: msys2 {0}
-      run: python -m pip install --upgrade build pip setuptools wheel pytest pytest-xdist flit
+      run: python -m pip install --upgrade flit
 
     - name: Build highctidh
       shell: msys2 {0}
