--- a/.github/workflows/windows-msys-32bit-clang-ucrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-32bit-clang-ucrt-python-pip-test.yml
@@ -26,9 +26,9 @@ jobs:
           python-setuptools
           python-wheel
           python-pytest
-          python-pytest-xdist
           git
           clang
+          mingw-w64-clang-i686-python-pytest-xdist
           mingw-w64-i686-clang
           make
 
