--- a/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
@@ -26,9 +26,9 @@ jobs:
           python-setuptools
           python-wheel
           python-pytest
-          python-pytest-xdist
           git
           clang
+          mingw-w64-clang-x86_64-python-pytest-xdist
           mingw-w64-x86_64-clang
           make
 
