try to disable this setuptools/disttools codepath

--- a/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Build highctidh
       shell: msys2 {0}
       run: |
-        CC=${{ matrix.CC }} CFLAGS="-v -v" make wheel
+        CC=${{ matrix.CC }} OPT="" make wheel
 
     - name: Test with pytest
       shell: msys2 {0}
