--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Build highctidh
       shell: msys2 {0}
       run: |
-        CC=${{ matrix.CC }} CFLAGS="-v -v" make wheel
+        CC=${{ matrix.CC }} OPT="" make wheel
 
     - name: Test with pytest
       shell: msys2 {0}
