--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
@@ -29,6 +29,7 @@ jobs:
           git
           gcc
           mingw-w64-clang-x86_64-python-pytest-xdist
+          mingw-w64-clang-x86_64-python-flit
           mingw-w64-x86_64-gcc
           mingw-w64-ucrt-x86_64-gcc
           make
@@ -42,9 +43,9 @@ jobs:
        bash --version
        ${{ matrix.CC }} -v
 
-    - name: Install dependencies
-      shell: msys2 {0}
-      run: python -m pip install --upgrade flit
+#   - name: Install dependencies
+#     shell: msys2 {0}
+#     run: python -m pip install --upgrade flit
 
     - name: Build highctidh
       shell: msys2 {0}
