--- a/.github/workflows/windows-msys-32bit-gcc-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-32bit-gcc-msvcrt-python-pip-test.yml
@@ -50,7 +50,7 @@ jobs:
       shell: msys2 {0}
       run: |
         export SOURCE_DATE_EPOCH=`git log -1 --pretty=%ct`
-        CC=${{ matrix.CC }} OPT="" cd src/ && python3 -m build --wheel
+        cd src/ && CC=${{ matrix.CC }} OPT="" python3 -m install
 
     - name: Test with pytest
       shell: msys2 {0}
