--- a/.github/workflows/windows-msys-32bit-gcc-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-32bit-gcc-msvcrt-python-pip-test.yml
@@ -52,6 +52,9 @@ jobs:
       run: |
         export SETUPTOOLS_USE_DISTUTILS=local
         export SOURCE_DATE_EPOCH=`git log -1 --pretty=%ct`
+        export HIGHCTIDH_PORTABLE=1
+        export WINDOWS=1
+        export MAKE=make
         cd src/ && CC=${{ matrix.CC }} OPT="" python3 setup.py install
 
     - name: Test with pytest
