--- a/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
@@ -54,7 +54,7 @@ jobs:
         export HIGHCTIDH_PORTABLE=1
         export WINDOWS=1
         export MAKE=make
-        cd src/ && CC=${{ matrix.CC }} OPT="" python3 -b build -v
+        cd src/ && CC=${{ matrix.CC }} OPT="" python3 -m build -v
 
     - name: Test with pytest
       shell: msys2 {0}
