--- a/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
@@ -1,4 +1,4 @@
-name: Windows Msys2 64bit (ucrt,msvcrt) clang Python pip build and test
+name: Windows Msys2 64bit (msvcrt) clang Python pip build and test
 
 on: [push]
 
@@ -9,7 +9,7 @@ jobs:
       matrix:
         OS: ["windows-2022"]
         CC: ["clang"]
-        ENVIRONMENT: ["CLANG64", "MINGW64"] # https://www.msys2.org/docs/environments/
+        ENVIRONMENT: ["MINGW64"] # https://www.msys2.org/docs/environments/
       fail-fast: false
 
     steps:
@@ -41,10 +41,6 @@ jobs:
        python -V
        bash --version
        ${{ matrix.CC }} -v
-
-#   - name: Install dependencies
-#     shell: msys2 {0}
-#     run: python -m pip install --upgrade flit
 
     - name: Build highctidh
       shell: msys2 {0}
