try to install lcoal repo

--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
@@ -52,7 +52,8 @@ jobs:
         export HIGHCTIDH_PORTABLE=1
         export WINDOWS=1
         export MAKE=make
-        CC=${{ matrix.CC }} OPT="" pip install -v highctidh
+        #CC=${{ matrix.CC }} OPT="" pip install -v highctidh
+        CC=${{ matrix.CC }} OPT="" py -m pip install src/ 
 
     - name: Test with pytest
       shell: msys2 {0}
