try editable mode

--- a/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-clang-ucrt-msvcrt-python-pip-test.yml
@@ -51,7 +51,7 @@ jobs:
         export WINDOWS=1
         export MAKE=make
         #CC=${{ matrix.CC }} OPT="" pip install -v highctidh 
-        CC=${{ matrix.CC }} OPT="" py -m pip install src/ 
+        CC=${{ matrix.CC }} OPT="" py -m pip install -e src/  
 
     - name: Test with pytest
       shell: msys2 {0}
