try to force compiler

--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-python-pip-test.yml
@@ -53,7 +53,7 @@ jobs:
         export WINDOWS=1
         export MAKE=make
         #CC=${{ matrix.CC }} OPT="" pip install -v highctidh
-        CC=${{ matrix.CC }} OPT="" py -m pip install -e src/  
+        CC=${{ matrix.CC }} OPT="" py -m pip install --global-option build_ext --global-option --compiler=mingw32 -e src/  
 
     - name: Test with pytest
       shell: msys2 {0}
