--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-golang-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-golang-test.yml
@@ -72,6 +72,7 @@ jobs:
           export CGO_ENABLED=1
           export GOEXPERIMENT=cgocheck2
           export GODEBUG=cgocheck=1
+          export CGO_LDFLAGS=-Wl,--no-as-needed
           go test -v ./src/ctidh511;
           go test -v ./src/ctidh512;
           go test -v ./src/ctidh1024;
