--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-golang-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-golang-test.yml
@@ -7,10 +7,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        OS: ["windows-2022"]
+        OS: ["windows-2019", "windows-2022"]
         CC: ["gcc"]
-        ENVIRONMENT: ["MINGW64"]
-        go-version: ["1.22.x"]
+        ENVIRONMENT: ["MSYS", "UCRT64", "MINGW64"]
+        # This works ENVIRONMENT: ["MINGW64"]
+        go-version: [ "1.19", "1.20", "1.21.x", "1.22.x"]
       fail-fast: false
       # Later try ENVIRONMENT: ["MSYS", "UCRT64", "MINGW64"]
       # See url for morre info: https://www.msys2.org/docs/environments/
