--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-golang-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-golang-test.yml
@@ -29,7 +29,8 @@ jobs:
             mingw-w64-x86_64-gcc
             mingw-w64-ucrt-x86_64-gcc
             mingw-w64-x86_64-go
-            mingw-w64-go
+            mingw-w64-ucrt-x86_64-go
+            mingw-w64-i686-go
             make
             git
             gcc
