--- a/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-golang-test.yml
+++ b/.github/workflows/windows-msys-64bit-gcc-cygwin-ucrt-msvcrt-golang-test.yml
@@ -9,12 +9,9 @@ jobs:
       matrix:
         OS: ["windows-2019", "windows-2022"]
         CC: ["gcc"]
-        ENVIRONMENT: ["MSYS", "UCRT64", "MINGW64"]
-        # This works ENVIRONMENT: ["MINGW64"]
+        ENVIRONMENT: ["UCRT64", "MINGW64"] # https://www.msys2.org/docs/environments/
         go-version: [ "1.19", "1.20", "1.21.x", "1.22.x"]
       fail-fast: false
-      # Later try ENVIRONMENT: ["MSYS", "UCRT64", "MINGW64"]
-      # See url for morre info: https://www.msys2.org/docs/environments/
     steps:
       - uses: actions/checkout@v4
 
@@ -30,7 +27,6 @@ jobs:
             mingw-w64-ucrt-x86_64-gcc
             mingw-w64-x86_64-go
             mingw-w64-ucrt-x86_64-go
-            mingw-w64-i686-go
             make
             git
             gcc
